--- a/index.html
+++ b/index.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html>
+  <html lang="de">
   <head>
     <meta charset="utf-8">
-    <meta name="Drumpad" content="">
+    <meta name="description" content="Drumpad">
+    <meta name="keywords" content="Drumpad, Music, Free">
+    <meta name="author" content="Mattis Petroll">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Smooch+Sans&family=Inconsolata">
     <link rel="stylesheet" href="./style/style.css">
   <title>Drumpad</title>
   </head>
     <body>
-        <h1 class="title">Drumpad</h1>
-        <p> Hier entsteht ein Drumpad</p>
+      <header>
+        <nav>
+          <div class="nav">
+
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="main">
+          <h1 class="title" id="top">Drumpad</h1>
+          <p class="Text"> Hier entsteht ein Drumpad</p>
+          <div class="drum-1">
+            <button class="drum" type="button" onclick="">
+
+            </button>
+          </div>
+          <div class="drum-2" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-3" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-4" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-5" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-6" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-7" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-8" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          <div class="drum-9" type="button" onclick="">
+            <button class="drum">
+
+            </button>
+          </div>
+          </div>
+          <p class="test"><strong>Das hier ist ein Platzhaltertext</strong>
+            <br>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+              Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+              Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+              At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
+        </div>
+      </main>
+      <footer>
+        <div class="footer">
+          <a id="top" href="#top">Back to top</a>
+        </div>
+      </footer>
     </body>
 </html>
