--- a/index.html
+++ b/index.html
@@ -21,11 +21,27 @@
       </header>
       <main>
         <div class="main">
-          <h1 class="title" id="top">Drumpad</h1>
-          <p class="Text"> Hier entsteht ein Drumpad</p>
+          <div>
+          <h1 class="title" id="top">Drumpad™</h1>
+        </div>
+        <div class="dropdown">
+          <button class="dropdownbutton">Bitte wähle deine Sounds</button>
+          <div class="dropdown-content">
+            <a href="#">Platzhaltertext1</a>
+            <a href="#">Platzhaltertext2</a>
+            <a href="#">Platzhaltertext3</a>
+            <a href="#">Platzhaltertext4</a>
+            <a href="#">Platzhaltertext5</a>
+            <a href="#">Platzhaltertext6</a>
+            <a href="#">Platzhaltertext7</a>
+            <a href="#">Platzhaltertext8</a>
+            <a href="#">Platzhaltertext9</a>
+          </div>
+        </div>
+        <div class="buttons">
           <div class="drum-1">
             <button class="drum" type="button" onclick="">
-
+               
             </button>
           </div>
           <div class="drum-2" type="button" onclick="">
@@ -69,7 +85,8 @@
             </button>
           </div>
           </div>
-          <p class="test"><strong>Das hier ist ein Platzhaltertext</strong>
+        </div>
+          <p class="text"><strong>Das hier ist ein Platzhaltertext</strong>
             <br>
               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
               Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -81,7 +98,7 @@
       </main>
       <footer>
         <div class="footer">
-          <a id="top" href="#top">Back to top</a>
+          <a id="top-button" href="#top">Back to top</a>
         </div>
       </footer>
     </body>
