--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           <div>
           <h1 class="title" id="top">Drumpad™</h1>
         </div>
-        <div class="dropdown">
+        <div class="start-stop">
+          <div class="loop-start"><button id="loop-button" class="loop-start-button" type="button">Play</button></div>
+          </div>
+       <!--  <div class="dropdown">
           <button class="dropdownbutton">Bitte wähle deine Sounds</button>
           <div class="dropdown-content">
             <a href="#">Platzhaltertext1</a>
@@ -38,7 +41,7 @@
             <a href="#">Platzhaltertext8</a>
             <a href="#">Platzhaltertext9</a>
           </div>
-        </div>
+        </div>  -->
         <div class="buttons">
           <div class="drum-1">
             <button class="drum" type="button" onclick="">
