--- a/index.html
+++ b/index.html
@@ -44,47 +44,46 @@
         </div>  -->
         <div class="buttons">
           <div class="drum-1">
-            <button class="drum" type="button" onclick="">
+            <button id="drum1"class="drum" type="button">
+            </button>
+          </div>
+          <div class="drum-2">
+            <button id="drum2"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-2" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-3">
+            <button id="drum3"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-3" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-4">
+            <button id="drum4"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-4" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-5">
+            <button id="drum5"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-5" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-6">
+            <button id="drum6"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-6" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-7">
+            <button id="drum7"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-7" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-8">
+            <button id="drum8"class="drum" type="button">
 
             </button>
           </div>
-          <div class="drum-8" type="button" onclick="">
-            <button class="drum">
-
-            </button>
-          </div>
-          <div class="drum-9" type="button" onclick="">
-            <button class="drum">
+          <div class="drum-9">
+            <button id="drum9"class="drum" type="button">
 
             </button>
           </div>
