--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
               Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
               At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
         </div>
+        <audio id="bassdrum" class="audio" src=""></audio>
+        <audio id="snaredrum" class="audio" src=""></audio>
+        <audio id="hihat" class="audio" src=""></audio>
+        <audio id="hihat-open" class="audio" src=""></audio>
+        <audio id="tom1" class="audio" src=""></audio>
+        <audio id="tom2" class="audio" src=""></audio>
+        <audio id="tom3" class="audio" src=""></audio>
+        <audio id="ridecymbal" class="audio" src=""></audio>
+        <audio id="crashcymbal" class="audio" src=""></audio>
       </main>
       <footer>
         <div class="footer">
