--- a/index.html
+++ b/index.html
@@ -28,20 +28,6 @@
         <div class="start-stop">
           <div class="loop-start"><button id="loop-button" class="loop-start-button" type="button">Play</button></div>
           </div>
-       <!--  <div class="dropdown">
-          <button class="dropdownbutton">Bitte wähle deine Sounds</button>
-          <div class="dropdown-content">
-            <a href="#">Platzhaltertext1</a>
-            <a href="#">Platzhaltertext2</a>
-            <a href="#">Platzhaltertext3</a>
-            <a href="#">Platzhaltertext4</a>
-            <a href="#">Platzhaltertext5</a>
-            <a href="#">Platzhaltertext6</a>
-            <a href="#">Platzhaltertext7</a>
-            <a href="#">Platzhaltertext8</a>
-            <a href="#">Platzhaltertext9</a>
-          </div>
-        </div>  -->
         <div class="buttons">
           <div class="drum-1">
             <button id="drum1"class="drum" type="button">
@@ -89,24 +75,36 @@
           </div>
           </div>
         </div>
-          <p class="text"><strong class="strong">Das hier ist ein Platzhaltertext</strong>
-            <br>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-              Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-              Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-              Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
-              At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
-        </div>
-        <audio id="bassdrum" class="audio" src=""></audio>
-        <audio id="snaredrum" class="audio" src=""></audio>
-        <audio id="hihat" class="audio" src=""></audio>
-        <audio id="hihat-open" class="audio" src=""></audio>
-        <audio id="tom1" class="audio" src=""></audio>
-        <audio id="tom2" class="audio" src=""></audio>
-        <audio id="tom3" class="audio" src=""></audio>
-        <audio id="ridecymbal" class="audio" src=""></audio>
-        <audio id="crashcymbal" class="audio" src=""></audio>
+           <div class="dropdown">
+          <button class="dropdownbutton">Bitte wähle deine Sounds</button>
+          <div class="dropdown-content">
+              <button id="dropdownbutton">Drum 1</button>
+            <div id="changeBassdrum" class="bassdrums-hidden">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton">Drum 2</button>
+            <button id="dropdownbutton">Drum 3</button>
+            <button id="dropdownbutton">Drum 4</button>
+            <button id="dropdownbutton">Drum 5</button>
+            <button id="dropdownbutton">Drum 6</button>
+            <button id="dropdownbutton">Drum 7</button>
+            <button id="dropdownbutton">Drum 8</button>
+            <button id="dropdownbutton">Drum 9</button>
+          </div>
+        </div> 
+      </div>
+        <audio id="bassdrum" class="audio" src="./media/drums/bassdrum.wav" type="audio/wav"></audio>
+        <audio id="snaredrum" class="audio" src="./media/drums/snaredrum.wav" type="audio/wav"></audio>
+        <audio id="hihat" class="audio" src="./media/drums/hihat.wav" type="audio/wav"></audio>
+        <audio id="hihat-open" class="audio" src="./media/drums/hihat-open.wav" type="audio/wav"></audio>
+        <audio id="tom1" class="audio" src="./media/drums/tom1.wav" type="audio/wav"></audio>
+        <audio id="tom2" class="audio" src="./media/drums/tom2.wav" type="audio/wav"></audio>
+        <audio id="tom3" class="audio" src="./media/drums/tom3.wav" type="audio/wav"></audio>
+        <audio id="ridecymbal" class="audio" src="./media/drums/ridecymbal.wav" type="audio/wav"></audio>
+        <audio id="crashcymbal" class="audio" src="./media/drums/crashcymbal.wav" type="audio/wav"></audio>
       </main>
       <footer>
         <div class="footer">
