--- a/index.html
+++ b/index.html
@@ -78,21 +78,69 @@
            <div class="dropdown">
           <button class="dropdownbutton">Bitte wähle deine Sounds</button>
           <div class="dropdown-content">
-              <button id="dropdownbutton">Drum 1</button>
-            <div id="changeBassdrum" class="bassdrums-hidden">
+              <button id="dropdownbutton1">Drum 1</button>
+            <div id="changeBassdrum" class="hidden query">
               <button>Bassdrum 1</button>
               <button>Bassdrum 2</button>
               <button>Bassdrum 3</button>
               <button>Bassdrum 4</button>
             </div>
-            <button id="dropdownbutton">Drum 2</button>
-            <button id="dropdownbutton">Drum 3</button>
-            <button id="dropdownbutton">Drum 4</button>
-            <button id="dropdownbutton">Drum 5</button>
-            <button id="dropdownbutton">Drum 6</button>
-            <button id="dropdownbutton">Drum 7</button>
-            <button id="dropdownbutton">Drum 8</button>
-            <button id="dropdownbutton">Drum 9</button>
+            <button id="dropdownbutton2">Drum 2</button>
+            <div id="changeSnaredrum" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton3">Drum 3</button>
+            <div id="changeHiHat" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton4">Drum 4</button>
+            <div id="changeTom1" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton5">Drum 5</button>
+            <div id="changeTom2" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton6">Drum 6</button>
+            <div id="changeTom3" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton7">Drum 7</button>
+            <div id="changeHiHat-open" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton8">Drum 8</button>
+            <div id="changeRidecymbal" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
+            <button id="dropdownbutton9">Drum 9</button>
+            <div id="changeCrashcymbal" class="hidden query">
+              <button>Bassdrum 1</button>
+              <button>Bassdrum 2</button>
+              <button>Bassdrum 3</button>
+              <button>Bassdrum 4</button>
+            </div>
           </div>
         </div> 
       </div>
